// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article with automatically placed NewsletterPuff should not render another NewsletterPuff when one already exists 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <span>
              <p>
                Some paragraph 4
              </p>
              <div>
                <InlineNewsletterPuff
                  code="TNL-101"
                  copy="We’ll send you our top stories, across all sections, straight to your inbox. Simple as that."
                  headline="Best of Times"
                  section="News"
                />
              </div>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`Article with automatically placed NewsletterPuff should render a NewsletterPuff correctly 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 9.98V19C22 20.1 21.1 21 20 21H4C2.9 21 2 20.1 2 19L2.01 7C2.01 5.9 2.9 5 4 5H14.1C14.04 5.32 14 5.66 14 6C14 6.34 14.04 6.68 14.1 7H4L12 12L15.67 9.71C16.14 10.14 16.69 10.47 17.3 10.69L12 14L4 9V19H20V10.9C20.74 10.75 21.42 10.42 22 9.98ZM16 6C16 7.66 17.34 9 19 9C20.66 9 22 7.66 22 6C22 4.34 20.66 3 19 3C17.34 3 16 4.34 16 6Z"
              fill="black"
            />
          </svg>
          <div>
            Check your inbox
          </div>
        </div>
        <button>
          <svg
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
              fill="black"
            />
          </svg>
        </button>
      </div>
      <div>
        <div>
          Verify your email by clicking on the link sent to your inbox.
        </div>
      </div>
    </div>
  </div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <AutoNewsletterPuff
              code="TNL-101"
              copy="Our flagship newsletter featuring our top stories and analysis, delivered every morning."
              headline="Best of Times"
              section="News"
            />
            <span>
              <p>
                Some paragraph 4
              </p>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
